--- a/slides.css
+++ b/slides.css
@@ -229,17 +229,23 @@ a, a > code {
 }
 
 /* Font sizes */
-.huge {
+.enormous {
    font-family: 'Open Sans', sans-serif;
-   font-size: 350%;
+   font-size: 500%;
    font-weight: bold;
    color: var(--purple);
 }
 
+
+.huge {font-size: 350%;
+         font-weight: bold;
+         font-family: 'Open Sans', sans-serif;
+}
+
+
 .larger {font-size: 300%;
          font-weight: bold;
          font-family: 'Open Sans', sans-serif;
-         color: var(--inverse-text-color);
 }
 
 .large { font-size: 200% }
