--- a/slides.css
+++ b/slides.css
@@ -250,6 +250,7 @@ a, a > code {
 
 .larger {font-size: 300%;
          font-weight: bold;
+         color: var(--header-color);
 }
 
 .large { font-size: 200% }
